--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 body {
   background-color: #dfe6e9;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Dosis', sans-serif;
 }
 
 .App {
