select border instead of color change for selected

--- a/client/src/cluster_by_service/cluster_by_service.css
+++ b/client/src/cluster_by_service/cluster_by_service.css
@@ -20,10 +20,7 @@ td.ignored {
 }
 
 td.selected {
-    background-color: #a29bfe;
-}
-tr:hover td.selected {
-    background-color: #b28bee;
+    border: #636e72 solid 5px;
 }
 
 iframe.very-small {
