--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,38 +9,61 @@ body {
   flex-direction: column;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 24px;
-}
-
 .App-header {
-  background-color: #b2bec3;
-  height: 34px;
+  /*background-color: #b2bec3;*/
+  /*height: 34px;*/
   /*padding: 10px;*/
   text-align: left;
   display: flex;
   align-items: center;
-  padding: 2px 5px;
+  padding: 10px 0px;
+}
+
+.App-header-container {
+  justify-content: center;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+}
+
+.App-logo {
+  /*animation: App-logo-spin infinite 20s linear;*/
+  height: 22px;
 }
 
 .App-title {
+  padding-left: 3px;
+  padding-top: 1px; /* to align this with the logo */
+  font-family: 'Pacifico', cursive;
   line-height: 22px;
   font-size: 22px;
-  flex-grow: 1;
-  justify-content: flex-end;
-  display: flex;
-
-  /*font-size: 1.8em;*/
-  /*color: #666666;*/
-  /*text-align: center;*/
-  /*flex-grow: 1;*/
 }
 
 .App-content {
-  margin: 10px;
   flex-grow: 1;
+  display: flex;
+  justify-content: center;
 }
+
+.App-subheader {
+  display: flex;
+  justify-content: center;
+  font-size: 22px;
+  padding-bottom: 10px;
+}
+
+.App-subheader > .previous {
+  color: #a2aeb3;
+  display: inline-block;
+}
+
+.App-subheader > .current {
+  font-weight: bold;
+  display: inline-block;
+}
+
+
+
 
 .App-intro {
   font-size: large;
