--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@ body {
   text-align: left;
   display: flex;
   flex-direction: column;
+  align-items: stretch;
 }
 
 .App-header {
@@ -62,6 +63,7 @@ body {
   flex-grow: 1;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .App-subheader {
@@ -109,4 +111,10 @@ body {
 .warn {
   background-color: orange;
   color: black;
+}
+
+.main-content {
+  width: 100%;
+  text-align: center;
+  overflow: scroll;
 }
