--- a/client/src/cluster_by_service/cluster_by_service.css
+++ b/client/src/cluster_by_service/cluster_by_service.css
@@ -25,21 +25,21 @@ iframe.very-small {
 .led-green {
     background-color: #00b894;
 }
-tr:hover .led-green {
+tr:hover .led-green, .led-green.mouse-over {
     background-color: #00a884;
 }
 
 .led-red {
     background-color: #d63031;
 }
-tr:hover .led-red {
+tr:hover .led-red, .led-red.mouse-over {
     background-color: #c62021;
 }
 
 .led-orange {
     background-color: #fdcb6e;
 }
-tr:hover .led-orange {
+tr:hover .led-orange, .led-orange.mouse-over {
     background-color: #edbb5e;
 }
 
@@ -49,7 +49,7 @@ td.ignored {
 td.ignored.even {
     background-color: #d3d3d3;
 }
-tr:hover .ignored {
+tr:hover .ignored, .ignored.mouse-over, .ignored.even.mouse-over {
     background-color: #c3c3c3;
 }
 
@@ -125,6 +125,10 @@ tr:hover.instance-failed > td.ignored {
 
 .service-name.even > div {
     background-color: #d3d3d3;
+}
+
+.service-name.even.mouse-over > div, .service-name.mouse-over > div {
+    background: #c3c3c3;
 }
 
 td:nth-child(2).service-name > div {
